--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     },
     "dependencies": {
         "@vue/compiler-sfc": "^3.2.33",
+        "datatables.net-buttons": "^2.2.3",
+        "datatables.net-buttons-dt": "^2.2.3",
         "datatables.net-dt": "^1.12.1",
         "jquery": "^3.6.0",
         "laravel-vue-pagination": "^3.0.0",
